[package]
name = "nes"
version = "0.1.0"
authors = ["Andrew Imm <aimm22@gmail.com>"]
edition = "2018"

[dependencies]
glutin = "0.20.0"
gl = "0.11.0"
gl-lite = "0.1.2"
emu-audio = {path = "../../lib/emu-audio"}
emu-shell = {path = "../../lib/emu-shell"}
nes-memmap = {path = "../../lib/nes-memmap"}
mos6510 = {path = "../../lib/mos6510"}